@@ -1,3 +1,8 @@
+2007-02-12  jtl  <jtl@schlund.de>
+
+	* src/de/schlund/pfixcore/workflow/Context.java (handleRequest): back port of redirects for 
+	non-matching/missing page information in URL (e.g. after pageflow)
+
 2007-02-12  Martin Leidig  <mleidig@schlund.de>
 
 	* src/de/schlund/pfixxml/FactoryInitServlet.java: store exception
